2014-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve left shift by literal, preparations for patch #234.

2014-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient clearing of high bytes of x and y, more efficient right shift.
	* src/SDCCpeeph.c:
	  Better immdInRange, patch by Ben Shi.
	* src/stm8/peeph.def:
	  Peepholes to optimize stack adjustment.

2014-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/pic16fam-h-gen.pl: updated

2014-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/ralloc2.cc:
	  Improve bitwise and, improve choice of shift location.

2014-04-20 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/non-free/include/pic14/pic16fam.h:
	  Updated and moved here: device/include/pic14/pic16fam.h

2014-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/stm8/peeph.def:
	  Applied a variant of patch #237 by Ben Shi, implementing RFE #400.
	* src/stm8/gen.c:
	  Use mov for POINTER_SET where it makes sense.

2014-04-16 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/cinc2h.pl,
	  support/scripts/mcs51-disasm.pl,
	  support/scripts/optimize_pic16devices.pl,
	  support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl:
	  Updated the copyright date.

2014-04-16 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/include/pic14/pic14devices.txt,
	  device/include/pic14/pic16regs.h,
	  device/non-free/include/pic14/pic12f1571.h,
	  device/non-free/include/pic14/pic12f1572.h,
	  device/non-free/include/pic14/pic12f1612.h,
	  device/non-free/include/pic14/pic16f1613.h,
	  device/non-free/include/pic14/pic16f1703.h,
	  device/non-free/include/pic14/pic16f1705.h,
	  device/non-free/include/pic14/pic16f1707.h,
	  device/non-free/include/pic14/pic16f1709.h,
	  device/non-free/include/pic14/pic16f1713.h,
	  device/non-free/include/pic14/pic16f1716.h,
	  device/non-free/include/pic14/pic16f1717.h,